fix main header z-index

--- a/themes/timtec/static/css/less/headers.less
+++ b/themes/timtec/static/css/less/headers.less
@@ -59,7 +59,7 @@ header, .main-header, .secondary-header, .page-header-double {
 // HEADER STYLES FOR THE INTERNAL PAGES (Lesson, Forum, Notes, Material, Classes)
 .main-header {
   position: relative;
-  z-index: 10;
+  z-index: 500;
   .page-header {
     margin-bottom: 20px;
     h1 {
